@@ -1,6 +1,6 @@
 # Hurd unionfs
-# Copyright (C) 2001, 2002 Free Software Foundation, Inc.
-# Written by Moritz Schulte <moritz@duesseldorf.ccc.de>.
+# Copyright (C) 2001, 2002, 2003 Free Software Foundation, Inc.
+# Written by Jeroen Dekkers <jeroen@dekkers.cx>.
 # 
 # This program is free software; you can redistribute it and/or modify
 # it under the terms of the GNU General Public License as published by
@@ -17,46 +17,20 @@
 # Foundation, Inc., 59 Temple Place, Suite 330, Boston, MA 02111-1307
 # USA.
 
-CFLAGS += -Wall -g -D_FILE_OFFSET_BITS=64 -std=gnu99 \
+CFLAGS += -Wall -g -O2 -D_FILE_OFFSET_BITS=64 -std=gnu99 \
 	  -DDEBUG
 LDFLAGS += -lnetfs -lfshelp -liohelp -lthreads \
            -lports -lihash -lshouldbeinlibc
+OBJS = main.o node.o lnode.o ulfs.o ncache.o netfs.o \
+       lib.o options.o
 
 all: unionfs
 
-unionfs: main.o node.o lnode.o ulfs.o ncache.o netfs.o \
-	 lib.o options.o
-	$(CC) -o $@ main.o node.o lnode.o ulfs.o options.o \
-	  ncache.o netfs.o lib.o $(LDFLAGS)
+unionfs: $(OBJS)
+	$(CC) -o $@ $(OBJS) $(LDFLAGS)
 
-unionfs.static: main.o node.o lnode.o ulfs.o ncache.o netfs.o \
-		lib.o options.o
-	$(CC) -static -o $@ main.o node.o lnode.o ulfs.o \
-	  ncache.o netfs.o lib.o options.o $(LDFLAGS)
-
-main.o: main.c
-	$(CC) $(CFLAGS) -c $<
-
-node.o: node.c
-	$(CC) $(CFLAGS) -c $<
-
-lnode.o: lnode.c
-	$(CC) $(CFLAGS) -c $<
-
-ulfs.o: ulfs.c
-	$(CC) $(CFLAGS) -c $<
-
-ncache.o: ncache.c
-	$(CC) $(CFLAGS) -c $<
-
-netfs.o: netfs.c
-	$(CC) $(CFLAGS) -c $<
-
-lib.o: lib.c
-	$(CC) $(CFLAGS) -c $<
-
-options.o: options.c
-	$(CC) $(CFLAGS) -c $<
+unionfs.static: $(OBJS)
+	$(CC) -static -o $@ $(OBJS) $(LDFLAGS)
 
 .PHONY: clean
 
